Statistics can read from Standard input
Until now, Gnuastro's programs would only take their input from a
file. However, atleast for plain text files, it is very annoying (and prone
to bugs) to be forced to create a new temporary file and break a series of
pipes.

One of the most common cases was the Statistics program: when you make a
column with something like `awk' and want to want to do some basic
statistical measurements on it. So to build the necessary infra-structure
(and use in all the programs), the Statistics program was chosen to start
with.

With this commit, an initial implementation of this system has been added
to Statistics, it will later be extended to any other program that takes
plain text files as input.

--- a/NEWS
+++ b/NEWS
@@ -58,6 +58,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
       column.
     - Sky estimation: new outlier estimation algorithm similar to
       NoiseChisel.
+    - Input can be given using the standard input (for example a pipe).
 
   Library:
     - gal_blank_flag_apply: Set all flagged/masked elements to blank.
@@ -67,6 +68,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
     - gal_fits_key_write_version_in_ptr: old gal_fits_key_write_version.
     - gal_fits_key_write_config: write key list and version as config header.
     - gal_statistics_outlier_positive: Find the first positive outlier.
+    - gal_txt_stdin_read: Read lines in standard input into a list of strings.
 
 ** Removed features
 
@@ -105,6 +107,16 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
     - gal_fits_key_write: filename and hdu instead of FITS pointer.
     - gal_fits_key_write_version: filename and hdu instead of FITS pointer.
     - gal_fits_key_write_filename: write at the top or end of the input list.
+    - gal_array_read: list of strings (from standard input) acceptable.
+    - gal_array_read_to_type: list of strings (from stin) acceptable.
+    - gal_array_read_one_ch: list of strings (from stdin) acceptable.
+    - gal_array_read_one_ch_to_type: list of strings (from stdin) acceptable.
+    - gal_table_info: list of strings (from stdin) acceptable.
+    - gal_table_read: list of strings (from stdin) acceptable.
+    - gal_txt_table_info: list of strings (from stdin) acceptable.
+    - gal_txt_image_info: list of strings (from stdin) acceptable.
+    - gal_txt_table_read: list of strings (from stdin) acceptable.
+    - gal_txt_image_read: list of strings (from stdin) acceptable.
 
 ** Bugs fixed
   bug #54493: Warp crashes when type isn't set.
