Stdin in ConvertType, Match, MakeProfiles, Table, and book
The low-level structure to read from the standard input is now also
implemented in ConvertType, Match, MakeProfiles and Table. A "Standard
input" section has also been added to the book and it is referred to in the
programs that use it.

--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,9 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
    - Input files and parameters written as keywords in the first extension
      of output when it is FITS. This is only relevant for some programs,
      (for example not the Fits or Table programs).
+   - Standard input (for example from pipes) is now available to feed input
+     to all programs that accept plain text input (ConvertType, Match,
+     MakeProfiles, Statistics, Table).
 
   Arithmetic:
     --onedasimage: write output as an image if it has one dimension, not table.
