Updated Acknowledgement statement
Since I have now moved to the IAC with a different funding source, the
acknowledgement statement that is output with `--cite' has now been
improved to include the new sources. The added statement was provided by
Johan Knapen.

Also, I noticed that my old Japanese funding was not completely mentioned
(full name of ministry, and funding grant numbers), so that has also been
corrected.

--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
    - Standard input (for example from pipes) is now available to feed input
      to all programs that accept plain text input (ConvertType, Match,
      MakeProfiles, Statistics, Table).
+   - Updated acknowledgement statement (output of `--cite' option).
 
   Arithmetic:
     --onedasimage: write output as an image if it has one dimension, not table.
