--- a/THANKS
+++ b/THANKS
@@ -41,6 +41,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Lee Kelvin                           l.s.kelvin@ljmu.ac.uk
     Brandon Kelly                        b.k.kelly@2017.ljmu.ac.uk
     Mohammad-Reza Khellat                moha.khe@gmail.com
+    Johan Knapen                         jhk@iac.es
     Geoffry Krouchi                      geoffrey.krouchi@etu.univ-lyon1.fr
     Floriane Leclercq                    floriane.leclercq@univ-lyon1.fr
     Alan Lefor                           alefor@astr.tohoku.ac.jp
