developer-build.sh: tarballs and PDFs in separate server directories
Until now, the `developer-build.sh' script would rename the tarball to
`gnuastro-latest.tar.lz' and upload the tarball and PDF file to the top
directory of the server. But for archival reasons, it is commonly necessary
to keep the tarball versions on the server. So with this commit, the
uploaded tarball will keep its version number and will be put in the `src'
directory of the server and the script will run SSH after copying the files
and make a symbolic link to the uploaded tarball that will always point to
the most recent version.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -6857,12 +6857,14 @@ or sending to colleagues who don't use Git for an easy build and manual.
 
 @item -u STR
 @item --upload STR
-Activate the @option{--dist} (@option{-D}) option, but also rename the
-tarball suffix to @file{-latest.tar.lz} (instead of the version
-number). Then use secure copy (@command{scp}, part of the SSH tools) to
-copy the tarball and PDF to the server and directory specified in the value
-to this option. For example @command{--upload my-server:dir}, will copy the
-two files to the @file{dir} directory of @code{my-server} server.
+Activate the @option{--dist} (@option{-D}) option, then use secure copy
+(@command{scp}, part of the SSH tools) to copy the tarball and PDF to the
+@file{src} and @file{pdf} subdirectories of the specified server and its
+directory (value to this option). For example @command{--upload
+my-server:dir}, will copy the tarball in the @file{dir/src}, and the PDF
+manual in @file{dir/pdf} of @code{my-server} server. It will then make a
+symbolic link in the top server directory to the tarball that is called
+@file{gnuastro-latest.tar.lz}.
 
 @item -p
 @itemx --publish
