Sanity check added on value to --section in Crop
Until now, there was no sanity checks on the values given to the
`--section' option in Crop! Therefore if (for example) there are alphabetic
characters in the value, it will fall into an infinite loop and hang! With
this commit, if any unrecognized character is encountered, Crop will abort
with an informative description.

This fixes bug #55157.

--- a/NEWS
+++ b/NEWS
@@ -130,6 +130,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   bug #54810: Arithmetic crash when previously named operand renamed.
   bug #55025: MakeCatalog's `--prepforconv' option being ignored.
   bug #55079: Blank EPS or PDF page when width options not given.
+  bug #55157: No sanity check on values given to Crop's --section.
 
 
 * Noteworthy changes in release 0.7 (library 5.0.0) (2018-08-08) [stable]
